fix: prevent z-index from overlapping header #7

--- a/src/style-flightline.scss
+++ b/src/style-flightline.scss
@@ -36,7 +36,6 @@
     width: 100%;
     position: relative;
     top: 10px;
-    z-index: 1;
   }
 }
 
